Archive2/43/5b3c3df8fce16e/output
main.cpp: In constructor 'B::B()':
main.cpp:9:8: error: use of deleted function 'A::~A()'
     B(){ };
        ^
main.cpp:3:5: note: declared here
     ~A() = delete;
     ^
